--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Town of Shadows</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Town of Shadows</title>
+    <style>
+      body {
+        background-color: #0d0d0d;
+        color: white;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
- <script type="module">
-  import { testConnection } from './api.js';
-  testConnection().then(msg => console.log('Backend says:', msg));
+    <script type="module">
+      import { testConnection } from './api.js';
+      testConnection();
     </script>
   </body>
 </html>
