--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     #chatArea{width:100%;max-width:760px;margin-top:10px;min-height:80px;border-top:1px solid #222;padding-top:8px}
     input,select{padding:6px;border-radius:6px;border:none}
     #roleActions{margin-top:10px}
+    .phaseBar{margin-top:8px;padding:8px;border-radius:6px;background:#16161a;width:100%;max-width:760px;text-align:center}
+    .countdown{font-weight:bold}
   </style>
 </head>
 <body>
   <h1>Town of Shadows</h1>
-  <div id="appArea"></div>
 
-  <!-- UI areas that will be filled by script -->
-  <div id="voteArea" style="margin-top:12px;display:flex;gap:8px;align-items:center">
-    <select id="voteTarget"></select>
-    <button id="voteBtn">Vote</button>
+  <div class="phaseBar">
+    Phase: <span id="phaseName">—</span> | Time left: <span id="phaseTime" class="countdown">—</span>
+  </div>
+
+  <div id="controls" style="margin-top:8px;">
     <button id="startBtn">Start Game</button>
-    <button id="phaseBtn">Next Phase</button>
+    <button id="skipPhaseBtn">Skip Phase</button>
   </div>
 
   <div id="roleActions"></div>
@@ -43,7 +45,7 @@ import { TownOfShadowsWS } from "./wsClient.js";
 
 const BACKEND_URL = "https://town-of-shadows-server.onrender.com";
 
-// ask for room (create if blank)
+// create/join room
 let roomInput = prompt("Enter Room ID (or leave blank to create a new room):");
 let roomId = roomInput?.trim();
 if (!roomId) {
@@ -60,17 +62,17 @@ game.connect();
 // UI refs
 const grid = document.getElementById("grid");
 const chatArea = document.getElementById("chatArea");
-const voteTarget = document.getElementById("voteTarget");
-const nightTarget = null; // night actions use role-specific UI
 const roleActions = document.getElementById("roleActions");
+const phaseName = document.getElementById("phaseName");
+const phaseTime = document.getElementById("phaseTime");
 
-// helper to append system/chat
+// helper
 function pushMessage(text) {
   const d = document.createElement("div"); d.textContent = text; chatArea.appendChild(d);
   chatArea.scrollTop = chatArea.scrollHeight;
 }
 
-// When we get room updates render grid & dropdown
+// handle room updates: render grid
 game.onRoomUpdate = (room) => {
   grid.innerHTML = "";
   room.players.forEach(p => {
@@ -79,50 +81,55 @@ game.onRoomUpdate = (room) => {
     box.innerHTML = `<strong>${p.name}</strong><div>${p.alive ? "🟩 Alive" : "💀 Dead"}</div><div>${p.symbol || ""}</div>`;
     grid.appendChild(box);
   });
-  // fill vote dropdown with alive players
-  const alive = room.players.filter(p => p.alive);
-  voteTarget.innerHTML = alive.map(p => `<option>${p.name}</option>`).join("");
 };
 
 // system messages
 game.onSystem = (msg) => { pushMessage("🔔 " + msg) }
 
-// chat
+// chats
 game.onChat = (from, text) => { pushMessage(`${from}: ${text}`) }
 
-// when private role arrives, show role UI
+// phase updates (from server)
+game.onPhase = (p) => {
+  phaseName.textContent = p.phase || "—";
+  if (typeof p.seconds !== 'undefined') phaseTime.textContent = p.seconds + "s";
+  // control chat / actions in UI based on phase (frontend disables chat input during night/public restrictions)
+  if (p.phase === "night") {
+    document.getElementById("chatInput").disabled = true;
+  } else {
+    document.getElementById("chatInput").disabled = false;
+  }
+};
+
+// private role arrives -> render role controls for that human
 let myRole = null;
+let myName = name;
 game.onPrivateRole = (obj) => {
   myRole = obj.role;
-  pushMessage(`(Private) Your role: ${obj.role} — ${obj.explain || ""}`);
+  pushMessage(`(PRIVATE) Your role: ${obj.role} — ${obj.explain || ""}`);
   renderRoleControls();
-}
+};
 
 // send chat
 document.getElementById("sendChat").onclick = () => {
   const t = document.getElementById("chatInput").value;
-  if (t) { game.sendChat(t); document.getElementById("chatInput").value = ""; }
+  if (!t) return;
+  game.sendChat(t);
+  document.getElementById("chatInput").value = "";
 };
 
-// start game button (POST)
-document.getElementById("startBtn").onclick = async () => {
-  const res = await fetch(`${BACKEND_URL}/start-game/${roomId}`, { method: "POST" });
-  const txt = await res.text(); pushMessage("Start: " + txt);
+// start game by sending ws start_game
+document.getElementById("startBtn").onclick = () => {
+  game.startGame();
 };
 
-// next phase
-document.getElementById("phaseBtn").onclick = async () => {
+// skip phase (admin / host control) - also useful for testing
+document.getElementById("skipPhaseBtn").onclick = async () => {
   const res = await fetch(`${BACKEND_URL}/next-phase/${roomId}`, { method: "POST" });
-  const txt = await res.text(); pushMessage("NextPhase: " + txt);
+  const txt = await res.text(); pushMessage("SkipPhase: " + txt);
 };
 
-// vote button (sends WS vote using slotless model; backend supports by name)
-document.getElementById("voteBtn").onclick = () => {
-  const target = voteTarget.value;
-  game.send({ type: "vote", slot: null, target });
-};
-
-// role controls rendering
+// render role controls (human-only buttons)
 function renderRoleControls() {
   roleActions.innerHTML = "";
   if (!myRole) return;
@@ -130,11 +137,11 @@ function renderRoleControls() {
   title.textContent = `Your role: ${myRole}`;
   roleActions.appendChild(title);
 
-  // Cupid
+  // Cupid (link two players)
   if (myRole === "Cupid") {
-    const inp = document.createElement("input"); inp.placeholder = "Name to link (lover)";
+    const inp = document.createElement("input"); inp.placeholder = "Name to link";
     const btn = document.createElement("button"); btn.textContent = "Link (Cupid)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "cupid_link"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "cupid_link"); }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
 
@@ -142,7 +149,7 @@ function renderRoleControls() {
   if (myRole === "Janitor") {
     const inp = document.createElement("input"); inp.placeholder = "Corpse name to clean";
     const btn = document.createElement("button"); btn.textContent = "Clean (Janitor)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "janitor_clean"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "janitor_clean"); }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
 
@@ -150,23 +157,26 @@ function renderRoleControls() {
   if (myRole === "Executioner") {
     const inp = document.createElement("input"); inp.placeholder = "Set target name";
     const btn = document.createElement("button"); btn.textContent = "Set Target (Executioner)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "executioner_set"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "executioner_set"); }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
 
   // Doctor
   if (myRole === "Doctor") {
-    const inp = document.createElement("input"); inp.placeholder = "Name to heal";
+    const inp = document.createElement("input"); inp.placeholder = "Name to heal (any)";
     const btn = document.createElement("button"); btn.textContent = "Heal (Doctor)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "doctor_heal"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "doctor_heal"); }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
 
-  // Mafioso / Killer: Kill button
-  if (myRole === "Mafioso" || myRole === "Godfather" || myRole === "Beastman") {
+  // Mafia kill roles
+  if (["Mafioso","Godfather","Beastman"].includes(myRole)) {
     const inp = document.createElement("input"); inp.placeholder = "Target name to kill";
     const btn = document.createElement("button"); btn.textContent = "Kill (Mafia)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "mafia_kill"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) {
+        const type = myRole === "Beastman" ? "beast_kill" : "mafia_kill";
+        game.queueAction(myName, tgt, type);
+    } }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
 
@@ -174,9 +184,19 @@ function renderRoleControls() {
   if (myRole === "Serial Killer") {
     const inp = document.createElement("input"); inp.placeholder = "Target name";
     const btn = document.createElement("button"); btn.textContent = "Kill (SK)";
-    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(name, tgt, "serial_kill"); }
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "serial_kill"); }
     roleActions.appendChild(inp); roleActions.appendChild(btn);
   }
+
+  // Detective / Investigator / Sheriff - investigation (example: Detective)
+  if (myRole === "Detective" || myRole === "Sheriff") {
+    const inp = document.createElement("input"); inp.placeholder = "Name to investigate";
+    const btn = document.createElement("button"); btn.textContent = "Investigate";
+    btn.onclick = () => { const tgt = inp.value.trim(); if (tgt) game.queueAction(myName, tgt, "detective_check"); }
+    roleActions.appendChild(inp); roleActions.appendChild(btn);
+  }
+
+  // add other role-specific UI elements as needed...
 }
 </script>
 </body>
